--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,8 @@
+<!-- openid delegate -->
+<link rel="openid.server" href="http://www.myopenid.com/server">
+  <link rel="openid.delegate" href="http://phlipper.myopenid.com/">
+  <meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=phlipper.myopenid.com">
+
 <!-- jQuery -->
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script type="text/javascript">jQuery.noConflict();</script>
