Update URLs for OpenID delegation
* Use `indieauth.com` provider
* Use `https` for canonical base URL

--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,5 +1,4 @@
 <!-- openid delegate -->
-<link rel="openid.server" href="http://www.myopenid.com/server">
-<link rel="openid.delegate" href="http://phlipper.myopenid.com/">
-<meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=phlipper.myopenid.com">
-
+<link href="https://github.com/phlipper" rel="me" />
+<link href="https://phlippers.net" rel="openid.delegate" />
+<link href="https://openid.indieauth.com/openid" rel="openid.server" />
