Add `<link rel=“pgpkey" />` for IndieAuth

--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -2,3 +2,4 @@
 <link href="https://github.com/phlipper" rel="me" />
 <link href="https://phlippers.net" rel="openid.delegate" />
 <link href="https://openid.indieauth.com/openid" rel="openid.server" />
+<link href="https://keybase.io/phlipper/pgp_keys.asc?fingerprint=18fefbc6c65e4da2316e56b3876e99492b9eb672" rel="pgpkey" />
